# ZipFile

./: .gitignore  .gitmodules  CMakeLists.txt  ZipFile.pri  zipfile.h
MiniZipCMake/: CMakeLists.txt
src/: src.pro  zipfile.cpp  zipfile.h  zipfile_global.h
tests/: CMakeLists.txt
tests/basic/: basic.pro  tst_zipfiletest.cpp  tst_zipfiletest.h
